Fixed the stretched look that the chapter card had and made the text look correct

--- a/css/index.css
+++ b/css/index.css
@@ -308,29 +308,36 @@ header .percents button {
 }
 .content-box .main-box .chapter-offer .book-blurb {
   display: flex;
+  height: 230px;
 }
 .content-box .main-box .chapter-offer .book-blurb img {
   box-shadow: 0 1px 3px #00000069;
   width: 150%;
-  height: auto;
+  height: 230px;
   margin-right: 18px;
 }
 .content-box .main-box .chapter-offer .book-blurb div {
   color: white;
   background: #315258;
-  padding: 22px;
+  padding: 13px 19px;
   font-family: 'Museo-sans';
   font-weight: 500;
   box-shadow: 0 1px 3px #00000069;
 }
 .content-box .main-box .chapter-offer .book-blurb div p {
-  font-size: 15px;
-  margin-bottom: 18px;
+  font-size: 13.8px;
+  text-align: justify;
+  line-height: 1.3;
+  margin-bottom: -3;
+  width: 327px;
+}
+.content-box .main-box .chapter-offer .book-blurb div p:first-child {
+  margin-bottom: 10px;
 }
 .content-box .main-box .chapter-offer .book-blurb div button {
   text-decoration: none;
-  width: 300px;
-  height: 67px;
+  width: 327px;
+  height: 52px;
   border: 1px solid #91413C;
   border-radius: 10px;
   background: #91413C;
@@ -342,6 +349,7 @@ header .percents button {
 }
 .content-box .aside-box {
   width: 350px;
+  height: auto;
   flex-direction: column;
   background: #F8F8F8;
   text-align: center;
@@ -350,11 +358,12 @@ header .percents button {
   margin: 0 0 18px 18px;
 }
 .content-box .aside-box h2 {
-  font-size: 2.7rem;
+  font-size: 27px;
   font-weight: 900;
   text-align: left;
   margin-top: 8px;
   padding-left: 22px;
+  line-height: 1.2;
 }
 .content-box .aside-box img {
   width: 100px;
@@ -384,6 +393,7 @@ header .percents button {
 .content-box .aside-box p {
   font-size: 0.8rem;
   margin-top: 1rem;
+  padding-bottom: 5px;
 }
 .content-box .aside-box li {
   font-size: 1.5rem;
