--- a/less/content-box.less
+++ b/less/content-box.less
@@ -86,18 +86,20 @@
 
             .book-blurb {
                 display: flex;
+                height: 230px;
 
                 img {
                     .box-shadow();
                     width: 150%; //I'm having the hardest time getting this photo to act like I expect it to act.
-                    height: auto;
+                    height: 230px;
                     margin-right: 18px;
                 }
 
                 div {
+
                     color: white;
                     background: @teal;
-                    padding: 22px;
+                    padding: 13px 19px;
 
                     font-family: @font;
                     font-weight: 500;
@@ -106,16 +108,23 @@
 
                     // Fix the spacing issue later and find out what is going on.
                     p {
-                        // width: 327px;
-                        font-size: 15px;
+                        font-size: 13.8px;
+                        text-align: justify;
+                        line-height: 1.3;
+                        margin-bottom: -3;
+                        width: 327px;
 
-                        margin-bottom: 18px;
+
+                    }
+
+                    p:first-child {
+                        margin-bottom: 10px;
                     }
 
                     button {
                         text-decoration: none;
-                        width: 300px;
-                        height: 67px;
+                        width: 327px;
+                        height: 52px;
                         border: 1px solid @red;
                         border-radius: 10px;
                         background: @red;
@@ -135,6 +144,7 @@
     // ===================================aside-box============================
     .aside-box {
         width: 350px;
+        height: auto;
         flex-direction: column;
         background: @offWhite;
         text-align: center;
@@ -143,11 +153,13 @@
         margin: 0 0 18px 18px;
 
         h2 {
-            font-size: 2.7rem;
+            font-size: 27px;
             font-weight: 900;
             text-align: left;
             margin-top: 8px;
             padding-left: 22px;
+            line-height: 1.2;
+
         }
 
         img {
@@ -183,6 +195,7 @@
         p {
             font-size: 0.8rem;
             margin-top: 1rem;
+            padding-bottom: 5px;
         }
 
         li {
